added motius and corresponding projects to english cv

--- a/CV_en_latex/CV_en.tex
+++ b/CV_en_latex/CV_en.tex
@@ -74,6 +74,7 @@
 	\cvitem{Description}{Design and development of a gamified learning experience on Android for students taking the introductory course for informatics programs at the TUM}
 
 	\section{Professional Experience}
+    \cventry{03/2016 -- 11/2016}{Student employee}{Motius}{Munich}{Software development with Android}{}
 	\cventry{01/2013 -- 07/2015}{Student employee}{Moosgruber}{Munich}{Software development mostly for car GUIs in C\# and Android}{}
 
 	\section{Language Skills}
@@ -101,6 +102,7 @@
   \newline
   Software testing in unusual circumstances (racetrack)}
   \vspace{8mm}
+
   \cvitem{\textbf{UPnP Controller}}{Development of an UPnP AV Controller on Windows and Android}
   \cvitem{Duration}{01/2014 - 03/2014 (full-time)}
   \cvitem{Role}{Software architect, developer and tester}
@@ -118,6 +120,7 @@
   \newline
   Developing an application for two different platforms simultaneously}
   \vspace{8mm}
+
   \cvitem{\textbf{Tuber}}{Platform for finding couriers to deliver packages, essentially Uber for shipping goods
   \newline
   The project was part of the Android practical course and was developed in cooperation with Gazoo HPC (US)}
@@ -129,9 +132,29 @@
   \newline
   Setting up an AWS micro instance and deploying the server code}
   \cvitem{Technologies}{Java, Android, GCM, JSON, NodeJs, PostgreSQL, AWS}
-  \cvitem{Characteristics}{Full-stack development of a server-client application with a team of two people
+  \cvitem{characteristics}{full-stack development of a server-client application with a team of two people
   \newline
-  Cooperation with a US company}
+  cooperation with a us company}
+  \vspace{8mm}
+
+  \cvitem{\textbf{HAWE Valve Control}}{Development of an Android application for controlling hydraulic valves via Bluetooth low energy}
+  \cvitem{Duration}{03/2016 - 07/2016 (part-time)}
+  \cvitem{Role}{Android developer}
+  \cvitem{Tasks}{Development of the Android Application on the base of an existing iOS App}
+  \cvitem{Technologies}{Java, Android}
+  \cvitem{characteristics}{Developing the application to look as the iOS counterpart
+  \newline
+  Intensive communication with the customer to provide knowledge of the code and bugfixing}
+  \vspace{8mm}
+
+  \cvitem{\textbf{TrustYou Mobile SDK}}{Development of an Android library for TrustYou hotel surveys}
+  \cvitem{Duration}{10/2016 - 11/2016 (part-time)}
+  \cvitem{Role}{Android developer}
+  \cvitem{Tasks}{Development, documentation and publication of a small Android library for integrating TrustYou surveys in third party applications}
+  \cvitem{Technologies}{Java, Android}
+  \cvitem{characteristics}{Providing an API for other programmers
+  \newline
+  Good, extensive documentation}
 	%\section{Interessen und Hobbies}
 	%\cvitem{Modellflug}{Seit mehreren Jahren in diesem Hobby tätig, speziell im Bereich des Kamerafluges, Mitglied der Akamodell München}
 	%\cvitem{Elektronik}{Basteln und Erstellen von Schaltungen}
