fixed some typos and formulation

--- a/CV_en_latex/CV_en.tex
+++ b/CV_en_latex/CV_en.tex
@@ -140,7 +140,7 @@
   \cvitem{\textbf{HAWE Valve Control}}{Development of an Android application for controlling hydraulic valves via Bluetooth low energy}
   \cvitem{Duration}{03/2016 - 07/2016 (part-time)}
   \cvitem{Role}{Android developer}
-  \cvitem{Tasks}{Development of the Android Application on the base of an existing iOS App}
+  \cvitem{Tasks}{Development of the Android application on the base of an existing iOS app}
   \cvitem{Technologies}{Java, Android}
   \cvitem{characteristics}{Developing the application to look as the iOS counterpart
   \newline
@@ -151,10 +151,10 @@
   \cvitem{Duration}{10/2016 - 11/2016 (part-time)}
   \cvitem{Role}{Android developer}
   \cvitem{Tasks}{Development, documentation and publication of a small Android library for integrating TrustYou surveys in third party applications}
-  \cvitem{Technologies}{Java, Android}
+  \cvitem{Technologies}{Java, Android, Javascript events}
   \cvitem{characteristics}{Providing an API for other programmers
   \newline
-  Good, extensive documentation}
+  Extensive documentation}
 	%\section{Interessen und Hobbies}
 	%\cvitem{Modellflug}{Seit mehreren Jahren in diesem Hobby tätig, speziell im Bereich des Kamerafluges, Mitglied der Akamodell München}
 	%\cvitem{Elektronik}{Basteln und Erstellen von Schaltungen}
