--- a/CV_en_latex/CV_en.tex
+++ b/CV_en_latex/CV_en.tex
@@ -32,7 +32,7 @@
 %\phone[fixed]{089~80039484}
 %\phone[fax]{+3~(456)~789~012}
 \email{pettinger.thomas@gmail.com}                               % optional, remove / comment the line if not wanted
-%\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
+\homepage{pete.nerdsho.me}                         % optional, remove / comment the line if not wanted
 %\social[linkedin]{john.doe}                        % optional, remove / comment the line if not wanted
 %\social[twitter]{jdoe}                             % optional, remove / comment the line if not wanted
 \social[github]{AnonymFx}                              % optional, remove / comment the line if not wanted
