added CQSE stuff

--- a/CV_en_latex/CV_en.tex
+++ b/CV_en_latex/CV_en.tex
@@ -55,106 +55,120 @@
 \begin{document}
 	%\begin{CJK*}{UTF8}{gbsn}                          % to typeset your resume in Chinese using CJK
 	%-----       resume       ---------------------------------------------------------
-	\makecvtitle
+\makecvtitle
 
-	\section{Personal Profile}
-	\cvitemwithcomment {Name} {Thomas Pettinger}{}
-	\cvitemwithcomment {Date of Birth} {25.01.1993}{}
-	\cvitemwithcomment {Mother} {Annerose Pettinger}{Child Care}
-	\cvitemwithcomment {Father} {Wilhelm Pettinger}{SAP Consultant}
+\section{Personal Profile}
+\cvitemwithcomment {Name} {Thomas Pettinger}{}
+\cvitemwithcomment {Date of Birth} {25.01.1993}{}
+\cvitemwithcomment {Mother} {Annerose Pettinger}{Child Care}
+\cvitemwithcomment {Father} {Wilhelm Pettinger}{SAP Consultant}
 
-	\section{Education}
-  \cventry{10/2015 - today}{M.Sc. Informatics}{Technische Universität München}{}{}{}
-	\cventry{10/2011 -- 09/2015}{B.Sc. Informatics: Games Engineering}{Technische Universität München}{}{\newline average: 1.9}{}
-  \cventry{2003 - 2011}{Gymnasium}{Hertzhaimer-Gymnasium}{Trostberg}{average: 2.0}{}
+\section{Education}
+\cventry{10/2015 - today}{M.Sc. Informatics}{Technische Universität München}{}{}{}
+\cventry{10/2011 -- 09/2015}{B.Sc. Informatics: Games Engineering}{Technische Universität München}{}{\newline average: 1.9}{}
+\cventry{2003 - 2011}{Gymnasium}{Hertzhaimer-Gymnasium}{Trostberg}{average: 2.0}{}
 
-	\section{Bachelor's Thesis}
-	\cvitem{Title}{\emph{Design and Development of a Mobile Game for ``Einführung in die Informatik 1''}}
-	\cvitem{Supervisor}{Prof. Dr. Anne Brüggemann-Klein}
-	\cvitem{Description}{Design and development of a gamified learning experience on Android for students taking the introductory course for informatics programs at the TUM}
+\section{Bachelor's Thesis}
+\cvitem{Title}{\emph{Design and Development of a Mobile Game for ``Einführung in die Informatik 1''}}
+\cvitem{Supervisor}{Prof. Dr. Anne Brüggemann-Klein}
+\cvitem{Description}{Design and development of a gamified learning experience on Android for students taking the introductory course for informatics programs at the TUM}
 
-	\section{Professional Experience}
-    \cventry{03/2016 -- 11/2016}{Student employee}{Motius}{Munich}{Software development with Android}{}
-	\cventry{01/2013 -- 07/2015}{Student employee}{Moosgruber}{Munich}{Software development mostly for car GUIs in C\# and Android}{}
+\section{Master's Thesis}
+\cvitem{Title}{\emph{Implementation and Evaluation of Static Feature Location in Practice}}
+\cvitem{Supervisor}{Prof. Dr. Dr. h.c. Manfred Broy}
+\cvitem{Description}{Evaluation of existing static and textual feature location techniques by comparing them with respect to existing benchmarks and the software project `Teamscale'}
 
-	\section{Language Skills}
-	\cvitem{German}{native}
-	\cvitem{English}{business fluent}
-	\cvitem{French}{Abitur}
+\section{Professional Experience}
+\cventry{06/2017 -- present}{Student employee}{CQSE}{Munich}{Software development with Java and JavaScript and Masters Thesis}{}
+\cventry{03/2016 -- 11/2016}{Student employee}{Motius}{Munich}{Software development with Android}{}
+\cventry{01/2013 -- 07/2015}{Student employee}{Moosgruber}{Munich}{Software development mostly for car GUIs in C\# and Android}{}
 
-	\section{Skills}
-	\cvitem{Very good}{Java, C\#, SQL, Latex}
-	\cvitem{Very good}{Linux, Windows, Android}
-	\cvitem{Good}{Kotlin, Python, C, C++, .Net, WPF, XAML, ASP.Net, javascript, HTML, CSS, JUnit, Google Guice, Easy Mock}
+\section{Language Skills}
+\cvitem{German}{native}
+\cvitem{English}{business fluent}
+\cvitem{French}{Abitur}
 
-  \newpage
-  \section{Projects}
-  \cvitem{\textbf{Racing Guide}}{Interface for the head-up display of a racing car to show turns and gear recommendations to the driver}
-  \cvitem{Duration}{08/2013 - 10/2013 (full-time)}
-  \cvitem{Role}{Software architect, developer and tester}
-  \cvitem{Tasks}{Creating the software architecture for the system with given requirements
-  \newline
-  Writing the code for the interface of the HUD, the GPS sensor connected to the system and for reading in the turn informations for racetracks from XML files
-  \newline
-  Testing the software in the car}
-  \cvitem{Technologies}{C\#, .Net, XAML, WPF, GPS, XML}
-  \cvitem{Characteristics}{Implementing an algorithm that detects the current turn on a racetrack and shows suitable information to the driver
-  \newline
-  Software testing in unusual circumstances (racetrack)}
-  \vspace{8mm}
+\section{Skills}
+\cvitem{Very good}{Java, C\#, SQL, Latex}
+\cvitem{Very good}{Linux, Windows, Android}
+\cvitem{Good}{Kotlin, Python, C, C++, .Net, WPF, XAML, ASP.Net, JavaScript, HTML, CSS, JUnit, Google Guice, Easy Mock}
 
-  \cvitem{\textbf{UPnP Controller}}{Development of an UPnP AV Controller on Windows and Android}
-  \cvitem{Duration}{01/2014 - 03/2014 (full-time)}
-  \cvitem{Role}{Software architect, developer and tester}
-  \cvitem{Tasks}{Creating the software architecture for the Windows and Android application with given requirements
-  \newline
-  On Windows: Developing and application that sends messages over the network to a receiver which controls a speaker via UPnP
-  \newline
-  On Android: Developing an app that controls the speaker directly with UPnP
-  \newline
-  Testing both applications with a Sonos speaker}
-  \cvitem{Technologies}{UPnP AV, C\#, SimbaMQ, Stomp, Android, Java}
-  \cvitem{Characteristics}{Finding good documented libraries for UPnP
-  \newline
-  Learning the UPnP protocols
-  \newline
-  Developing an application for two different platforms simultaneously}
-  \vspace{8mm}
+\newpage
+\section{Projects}
+\cvitem{\textbf{Racing Guide}}{Interface for the head-up display of a racing car to show turns and gear recommendations to the driver}
+\cvitem{Duration}{08/2013 - 10/2013 (full-time)}
+\cvitem{Role}{Software architect, developer and tester}
+\cvitem{Tasks}{Creating the software architecture for the system with given requirements
+	\newline
+	Writing the code for the interface of the HUD, the GPS sensor connected to the system and for reading in the turn informations for racetracks from XML files
+	\newline
+Testing the software in the car}
+\cvitem{Technologies}{C\#, .Net, XAML, WPF, GPS, XML}
+\cvitem{Characteristics}{Implementing an algorithm that detects the current turn on a racetrack and shows suitable information to the driver
+	\newline
+Software testing in unusual circumstances (racetrack)}
+\vspace{8mm}
 
-  \cvitem{\textbf{Tuber}}{Platform for finding couriers to deliver packages, essentially Uber for shipping goods
-  \newline
-  The project was part of the Android practical course and was developed in cooperation with Gazoo HPC (US)}
-  \cvitem{Duration}{10/2015 - 02/2016 (part-time)}
-  \cvitem{Role}{Software architect, Android developer and system administrator}
-  \cvitem{Tasks}{Designing the software architecture for client, server and communication
-  \newline
-  Implementing the Android application with user login, networking and UI design
-  \newline
-  Setting up an AWS micro instance and deploying the server code}
-  \cvitem{Technologies}{Java, Android, GCM, JSON, NodeJs, PostgreSQL, AWS}
-  \cvitem{characteristics}{full-stack development of a server-client application with a team of two people
-  \newline
-  cooperation with a us company}
-  \vspace{8mm}
+\cvitem{\textbf{UPnP Controller}}{Development of an UPnP AV Controller on Windows and Android}
+\cvitem{Duration}{01/2014 - 03/2014 (full-time)}
+\cvitem{Role}{Software architect, developer and tester}
+\cvitem{Tasks}{Creating the software architecture for the Windows and Android application with given requirements
+	\newline
+	On Windows: Developing and application that sends messages over the network to a receiver which controls a speaker via UPnP
+	\newline
+	On Android: Developing an app that controls the speaker directly with UPnP
+	\newline
+Testing both applications with a Sonos speaker}
+\cvitem{Technologies}{UPnP AV, C\#, SimbaMQ, Stomp, Android, Java}
+\cvitem{Characteristics}{Finding good documented libraries for UPnP
+	\newline
+	Learning the UPnP protocols
+	\newline
+Developing an application for two different platforms simultaneously}
+\vspace{8mm}
 
-  \cvitem{\textbf{HAWE Valve Control}}{Development of an Android application for controlling hydraulic valves via Bluetooth low energy}
-  \cvitem{Duration}{03/2016 - 07/2016 (part-time)}
-  \cvitem{Role}{Android developer}
-  \cvitem{Tasks}{Development of the Android application on the base of an existing iOS app}
-  \cvitem{Technologies}{Java, Android}
-  \cvitem{characteristics}{Developing the application to look as the iOS counterpart
-  \newline
-  Intensive communication with the customer to provide knowledge of the code and bugfixing}
-  \vspace{8mm}
+\cvitem{\textbf{Tuber}}{Platform for finding couriers to deliver packages, essentially Uber for shipping goods
+	\newline
+The project was part of the Android practical course and was developed in cooperation with Gazoo HPC (US)}
+\cvitem{Duration}{10/2015 - 02/2016 (part-time)}
+\cvitem{Role}{Software architect, Android developer and system administrator}
+\cvitem{Tasks}{Designing the software architecture for client, server and communication
+	\newline
+	Implementing the Android application with user login, networking and UI design
+	\newline
+Setting up an AWS micro instance and deploying the server code}
+\cvitem{Technologies}{Java, Android, GCM, JSON, NodeJs, PostgreSQL, AWS}
+\cvitem{characteristics}{full-stack development of a server-client application with a team of two people
+	\newline
+cooperation with a us company}
+\vspace{8mm}
 
-  \cvitem{\textbf{TrustYou Mobile SDK}}{Development of an Android library for TrustYou hotel surveys}
-  \cvitem{Duration}{10/2016 - 11/2016 (part-time)}
-  \cvitem{Role}{Android developer}
-  \cvitem{Tasks}{Development, documentation and publication of a small Android library for integrating TrustYou surveys in third party applications}
-  \cvitem{Technologies}{Java, Android, Javascript events}
-  \cvitem{characteristics}{Providing an API for other programmers
-  \newline
-  Extensive documentation}
+\cvitem{\textbf{HAWE Valve Control}}{Development of an Android application for controlling hydraulic valves via Bluetooth low energy}
+\cvitem{Duration}{03/2016 - 07/2016 (part-time)}
+\cvitem{Role}{Android developer}
+\cvitem{Tasks}{Development of the Android application on the base of an existing iOS app}
+\cvitem{Technologies}{Java, Android}
+\cvitem{characteristics}{Developing the application to look as the iOS counterpart
+	\newline
+Intensive communication with the customer to provide knowledge of the code and bugfixing}
+\vspace{8mm}
+
+\cvitem{\textbf{TrustYou Mobile SDK}}{Development of an Android library for TrustYou hotel surveys}
+\cvitem{Duration}{10/2016 - 11/2016 (part-time)}
+\cvitem{Role}{Android developer}
+\cvitem{Tasks}{Development, documentation and publication of a small Android library for integrating TrustYou surveys in third party applications}
+\cvitem{Technologies}{Java, Android, Javascript events}
+\cvitem{characteristics}{Providing an API for other programmers
+	\newline
+Extensive documentation}
+\vspace{8mm}
+
+\cvitem{\textbf{Teamscale}}{Development of a software quality assessment tool}
+\cvitem{Duration}{06/2017 - 08/2017 (part-time)}
+\cvitem{Role}{Mostly JavaScript with Google Closure}
+\cvitem{Tasks}{Get to know the software and make some changes according to tickets}
+\cvitem{Technologies}{Java, JavaScript, Google Closure}
+\cvitem{characteristics}{Get to knnow a large software project}
 	%\section{Interessen und Hobbies}
 	%\cvitem{Modellflug}{Seit mehreren Jahren in diesem Hobby tätig, speziell im Bereich des Kamerafluges, Mitglied der Akamodell München}
 	%\cvitem{Elektronik}{Basteln und Erstellen von Schaltungen}
