--- a/CV_en_latex/CV_en.tex
+++ b/CV_en_latex/CV_en.tex
@@ -79,7 +79,7 @@
 \cvitem{Description}{Evaluation of existing static and textual feature location techniques by comparing them with respect to existing benchmarks and the software project `Teamscale'}
 
 \section{Professional Experience}
-\cventry{06/2017 -- present}{Student employee}{CQSE}{Munich}{Software development with Java and JavaScript and Masters Thesis}{}
+\cventry{06/2017 -- today}{Student employee}{CQSE}{Munich}{Software development with Java and JavaScript and Masters Thesis}{}
 \cventry{03/2016 -- 11/2016}{Student employee}{Motius}{Munich}{Software development with Android}{}
 \cventry{01/2013 -- 07/2015}{Student employee}{Moosgruber}{Munich}{Software development mostly for car GUIs in C\# and Android}{}
 
