--- a/CV_en_latex/CV_en.tex
+++ b/CV_en_latex/CV_en.tex
@@ -79,7 +79,7 @@
 \cvitem{Description}{Evaluation of existing static and textual feature location techniques by comparing them with respect to existing benchmarks and the software project `Teamscale'}
 
 \section{Professional Experience}
-\cventry{06/2017 -- today}{Student employee}{CQSE}{Munich}{Software development with Java and JavaScript and Masters Thesis}{}
+\cventry{06/2017 -- today}{Student employee}{CQSE}{Munich}{Software development with Java and JavaScript, Masters Thesis}{}
 \cventry{03/2016 -- 11/2016}{Student employee}{Motius}{Munich}{Software development with Android}{}
 \cventry{01/2013 -- 07/2015}{Student employee}{Moosgruber}{Munich}{Software development mostly for car GUIs in C\# and Android}{}
 
@@ -138,7 +138,7 @@ The project was part of the Android practical course and was developed in cooper
 	\newline
 Setting up an AWS micro instance and deploying the server code}
 \cvitem{Technologies}{Java, Android, GCM, JSON, NodeJs, PostgreSQL, AWS}
-\cvitem{characteristics}{full-stack development of a server-client application with a team of two people
+\cvitem{Characteristics}{full-stack development of a server-client application with a team of two people
 	\newline
 cooperation with a us company}
 \vspace{8mm}
@@ -148,7 +148,7 @@ cooperation with a us company}
 \cvitem{Role}{Android developer}
 \cvitem{Tasks}{Development of the Android application on the base of an existing iOS app}
 \cvitem{Technologies}{Java, Android}
-\cvitem{characteristics}{Developing the application to look as the iOS counterpart
+\cvitem{Characteristics}{Developing the application to look as the iOS counterpart
 	\newline
 Intensive communication with the customer to provide knowledge of the code and bugfixing}
 \vspace{8mm}
@@ -158,17 +158,17 @@ Intensive communication with the customer to provide knowledge of the code and b
 \cvitem{Role}{Android developer}
 \cvitem{Tasks}{Development, documentation and publication of a small Android library for integrating TrustYou surveys in third party applications}
 \cvitem{Technologies}{Java, Android, Javascript events}
-\cvitem{characteristics}{Providing an API for other programmers
+\cvitem{Characteristics}{Providing an API for other programmers
 	\newline
 Extensive documentation}
 \vspace{8mm}
 
-\cvitem{\textbf{Teamscale}}{Development of a software quality assessment tool}
+\cvitem{\textbf{Teamscale}}{Development of a Software Quality Qssessment Tool}
 \cvitem{Duration}{06/2017 - 08/2017 (part-time)}
 \cvitem{Role}{Mostly JavaScript with Google Closure}
 \cvitem{Tasks}{Get to know the software and make some changes according to tickets}
 \cvitem{Technologies}{Java, JavaScript, Google Closure}
-\cvitem{characteristics}{Get to knnow a large software project}
+\cvitem{Characteristics}{Get to know a large software project}
 	%\section{Interessen und Hobbies}
 	%\cvitem{Modellflug}{Seit mehreren Jahren in diesem Hobby tätig, speziell im Bereich des Kamerafluges, Mitglied der Akamodell München}
 	%\cvitem{Elektronik}{Basteln und Erstellen von Schaltungen}
